--- a/resources/css/scroll/scroll-top.css
+++ b/resources/css/scroll/scroll-top.css
@@ -4,12 +4,12 @@
 .scroll-to-top {
   position: fixed;
   top: 0;
-  right: 50px;
+  right: 70px;
   width: 50px;
   height: 50px;
 
-  background: #d8d8d8;
-  color: rgb(0, 0, 0);
+  background: #dbdbdb;
+  color: rgb(133, 133, 133);
   border: none;
 
   border-bottom-right-radius: 10px;
@@ -58,7 +58,7 @@
   .scroll-to-top {
     width: 45px;
     height: 45px;
-    right: 30px;
+    right: 50px;
     bottom: 20px;
     font-size: 20px;
   }
