--- a/resources/css/header/header.css
+++ b/resources/css/header/header.css
@@ -14,6 +14,20 @@ body {
     scroll-behavior: smooth;
 }
 
+.login-btn {
+    padding: 8px 20px;
+    border-radius: 25px;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0) !important;
+    font-weight: 600;
+    transition: 0.3s ease;
+    text-decoration: none;
+}
+
+.login-btn:hover {
+    background: #d6d6d6;
+}
+
 /* ======================
    DESKTOP NAVBAR
 ====================== */
@@ -30,8 +44,16 @@ body {
 
 .navbar .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between !important;
+    align-items: center;
+    width: 100%;
 }
+
+.navbar-right {
+    display: flex;
+    align-items: center;
+}
+
 
 /* nav links */
 .navbar-nav .nav-link {
@@ -189,7 +211,7 @@ body {
         top: 0;
         left: -100%; /* hidden */
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-color: rgba(0, 0, 0, 2.5);
         padding: 30px 20px;
         transition: 0.3s ease-in-out;
