--- a/resources/css/franchisability/franchising_checklist.css
+++ b/resources/css/franchisability/franchising_checklist.css
@@ -1,4 +1,11 @@
-
+body {
+    background-color: #0d3553;
+    color: #ffffff;
+    font-family: 'Helvetica', sans-serif;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
 
 
 /* =========================
